Database pt.8 (version Alpha 0.0.2 - List replaced with HashMap)